<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_translate">

    <fragment
        android:id="@+id/navigation_translate"
        android:label="@string/Translate"
        android:name="wangk6.travelling.fragments.TranslateFragment"
        tools:layout="@layout/fragment_translate">
    </fragment>

    <fragment
        android:id="@+id/navigation_about"
        android:name="wangk6.travelling.fragments.AboutFragment"
        android:label="@string/About"
        tools:layout="@layout/fragment_about">
    </fragment>

    <fragment
        android:id="@+id/navigation_quiz"
        android:name="wangk6.travelling.fragments.QuizFragment"
        android:label="@string/Quiz"
        tools:layout="@layout/fragment_quiz">
    </fragment>

    <fragment
        android:id="@+id/navigation_map"
        android:label="@string/Map"
        android:name="wangk6.travelling.fragments.MapFragment"
        tools:layout="@layout/fragment_map">
    </fragment>

</navigation>
